# ocaml-jsonschema

./: .gitmodules  CHANGELOG.md  README.md  dune-project  jsonschema.opam  jsonschema.opam.template
lib/: compiler.ml  compiler.mli  content.ml  content.mli  draft.ml  draft.mli  dune  error.ml  formats.ml  json_pointer.ml  jsonschema.ml  jsonschema.mli  loader.ml  loader.mli  output.ml  output.mli  schema.ml  schema.mli  types.ml  types.mli  validation_error.ml  validation_error.mli  validator.ml
test/: dune  test_jsonschema.t  test_jsonschema_draft2020_12_failing.t  test_runner.ml
